--- a/.github/workflows/dep-check.yml
+++ b/.github/workflows/dep-check.yml
@@ -1,9 +1,8 @@
 name: bootstrap dependency validation loop
-on: push
-# on:
-#   schedule:
-#     # Runs every 15 minutes
-#     - cron: '*/15 * * * *'
+on:
+  schedule:
+    # Runs every 15 minutes
+    - cron: '*/15 * * * *'
 
 jobs:
   check-bans:
